; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-rational/src/extr_rational.c_rational_to_f.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-rational/src/extr_rational.c_rational_to_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrb_rational = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @rational_to_f to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rational_to_f(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mrb_rational*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.mrb_rational* @rational_ptr(i32* %7, i32 %8)
  store %struct.mrb_rational* %9, %struct.mrb_rational** %5, align 8
  %10 = load %struct.mrb_rational*, %struct.mrb_rational** %5, align 8
  %11 = getelementptr inbounds %struct.mrb_rational, %struct.mrb_rational* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = trunc i64 %12 to i32
  %14 = load %struct.mrb_rational*, %struct.mrb_rational** %5, align 8
  %15 = getelementptr inbounds %struct.mrb_rational, %struct.mrb_rational* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = trunc i64 %16 to i32
  %18 = sdiv i32 %13, %17
  store i32 %18, i32* %6, align 4
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @mrb_float_value(i32* %19, i32 %20)
  ret i32 %21
}

declare dso_local %struct.mrb_rational* @rational_ptr(i32*, i32) #1

declare dso_local i32 @mrb_float_value(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
